# openbridge-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  fastagent.config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_tool_call.py
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/auth/: authentication.py  manager.py  registry.py  simple.py  token_store.py  token_verifier.py
src/auth/providers/: __init__.py  base.py  openbridge.py
src/config/: settings.py
src/models/: __init__.py  base_models.py
src/server/: mcp_server.py  sampling.py
src/server/agents/: agent.py  fastagent.config.yaml
src/server/tools/: account_openapi.py  authentication.py  authentication_openapi.py  base.py  healthchecks.py  jobs.py  products.py  remote_identity.py  service.py  subscriptions.py  subscriptions_openapi.py
src/utils/: __init__.py  header_resolver.py  http_client.py  logging.py  security.py
src/utils/http/: __init__.py  circuit_breaker.py  client_manager.py  request.py  retry.py
src/utils/media/: negotiator.py  types.py
src/utils/openapi/: __init__.py  json.py  refs.py
tests/: test_client.py  test_security_fixes.py
tests/auth/: test_authentication.py  test_token_verifier.py
tests/server/: test_mcp_server.py  test_sampling.py
tests/server/tools/: test_base.py  test_healthchecks.py  test_jobs.py  test_products.py  test_remote_identity.py  test_service.py  test_subscriptions.py
