[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "openbridge-mcp"
version = "0.1.7"
description = "FastMCP server for Openbridge API integration"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "src*",]
